<resources>
    <string-array name="barcode_types">
        <item>AZTEC</item>
        <item>CODABAR</item>
        <item>CODE_39</item>
        <item>CODE_93</item>
        <item>CODE_128</item>
        <item>DATA_MATRIX</item>
        <item>EAN_8</item>
        <item>EAN_13</item>
        <item>ITF</item>
        <item>MAXICODE</item>
        <item>PDF_417</item>
        <item>QR_CODE</item>
        <item>RSS_14</item>
        <item>RSS_EXPANDED</item>
        <item>UPC_A</item>
        <item>UPC_E</item>
        <item>UPC_EAN_EXTENSION</item>
    </string-array>

    <string name="app_name">Barcode Vault</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add item</string>
    <string name="title_activity_add_item">Add new item</string>
    <string name="item_icon">Item icon</string>
    <string name="item_text">Item text</string>
    <string name="n_a">N/A</string>
    <string name="add_new_item">Add new item</string>
    <string name="update_item">Update item</string>
    <string name="export_to">Export items to …</string>
    <string name="import_from_file">Import items from file</string>
    <string name="empty_barcode">00000000</string>
    <string name="barcode_text">Barcode text</string>
    <string name="barcode_desc">Description</string>
    <string name="this_is_dummy_barcode">This is dummy barcode</string>
    <string name="item_desc">Item description</string>
    <string name="item_type">Item type</string>
    <string name="clear_items">Clear all items</string>
    <string name="barcode_sample_preview">Barcode sample preview</string>
    <string name="item_icon_url">Item icon URL</string>
    <string name="enter_url_hint">Enter URL</string>
    <string name="barcode">Barcode</string>
    <string name="title_activity_show_barcode">Show barcode</string>
    <string name="describe_me">Describe me</string>
    <string name="barcode_vault">Barcode Vault</string>
    <string name="copyright_line">Richard Kosegi (c) 2026</string>
    <string name="title_activity_about">About ...</string>
    <string name="about_app">About ...</string>
</resources>