<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.rkosegi.barcodevault.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/export_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/import_from_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:title="@string/add_new_item"
        android:orderInCategory="10"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_items"
        android:orderInCategory="500"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_app"
        android:orderInCategory="600"
        />
</menu>