<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="12dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="32pt"
        android:layout_height="32pt"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/item_icon" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_desc"
            android:text="@string/n_a"
            android:maxHeight="36dp"
            android:textColor="#9C27B0"
            android:textSize="26sp"
            />

        <TextView
            android:id="@+id/item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_type"
            android:text="@string/n_a"
            android:textColor="#3F51B5"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>