<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/input_barcode_text"
        android:text="@string/barcode_text"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/qr"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_barcode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_barcode"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/input_barcode_desc"
        android:text="@string/barcode_desc"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_barcode_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="26sp"
        android:text="@string/describe_me" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/input_barcode_type"
        android:text="@string/item_type"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/input_barcode_type"
        android:layout_width="match_parent"
        android:layout_height="46dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/input_barcode_type"
        android:text="@string/item_icon_url"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/folder_open"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_icon_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/enter_url_hint"
            android:textSize="32sp"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="48sp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_add_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/add_new_item" />

</LinearLayout>