<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/barcode"
        android:scaleType="fitCenter"
        android:src="@drawable/barcode"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode_vault"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/copyright_line"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>